Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://goodhopebaptist.org/" # the base hostname & protocol for your site
 twitter_username: jtgry
 github_username:  jtgry
-
+permalink: pretty
 # Build settings
 markdown: kramdown
 
